Fix shifted footer border for screen 1024px

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.scss
@@ -61,7 +61,7 @@
     min-width: fit-content;
 }
 
-@media screen and (min-width: $desktop-breakpoint) {
+@media screen and (min-width: $desktop-breakpoint + 1) {
     .actions {
         height: 8.625rem;
 
